--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+opencv-python-headless
 rembg==2.0.50
 Pillow==9.3.0
 streamlit==1.21.0
@@ -13,5 +14,4 @@ click==8
 blind-watermark
 fuzzywuzzy
 ultralytics
-opencv-python
 pywavelets
