--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 opencv-python
-rembg==2.0.50
-Pillow==9.3.0
-streamlit==1.26.0
-numba==0.57
-numpy==1.23.0
+rembg
+Pillow
+streamlit
+numba
+numpy
 altair
 pandas
 google-api-python-client
